<resources>
    <string name="app_name">VideoPlayer_and_downloader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_video">Next</string>
    <string name="pause">Pause</string>
    <string name="mini_player_not_supported">Mini player Not Supported</string>
    <string name="allow_overlay_permission_first">Allow Screen Overlay Permission First</string>
    <string name="aspect">Aspect</string>
    <string name="cannot_share_file">Cannot share media</string>
    <string name="already_rated">main_playlists_added</string>
    <string name="recent">Recent Played</string>
    <string name="recent_tab">Recents</string>
    <string name="general">General</string>
    <string name="audio">Audio</string>
    <string name="downloads">Downloads</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="default_notification_channel_id">MoPlayer_chenal_123</string>
    <string name="yes">Exit</string>
    <string name="breakImage">break Image</string>
    <string name="ad">Ad</string>
    <string name="no_activity_found">No App Found to launch market</string>
    <string name="adShow">adShow</string>
    <string name="mainPreferences">mainPreferences</string>
    <string name="start">Start</string>
    <string name="menu">menu</string>
    <string name="video">Video</string>
    <string name="player">Video Player</string>
    <string name="rate_us">Rate Us</string>
    <string name="tab_item">Tab Item</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="themes">Themes</string>
    <string name="search_for_videos_playlist_folders">Search for Videos ,Playlist , Folders</string>
    <string name="videos">Videos</string>
    <string name="recently_played">Recently Played</string>
    <string name="root">Root</string>
    <string name="wait">Wait for a moment …</string>
    <string name="fetching_media">Fetching your media …</string>
    <string name="thumbnail">thumbnail</string>
    <string name="dummy_name">Love me like you do Love me like you do Love me like you do Love me like you do.mp4</string>
    <string name="dummy_size_quality">360p | 3.45mb</string>
    <string name="real_size_quality">%1$s | %2$s</string>
    <string name="view_all">View All</string>
    <string name="playlist">Playlist</string>
    <string name="folders">Folders</string>
    <string name="num_items">%1$d %2$s</string>
    <string name="more">more</string>
    <string name="main_data_base">MainFileDatabase</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="rename_file">Rename</string>
    <string name="delete_file">Delete</string>
    <string name="share_file">Share</string>
    <string name="media_added_to_playlist">Media added to playlist</string>
    <string name="media_already_exists_playlist">Media already exists in playlist</string>
    <string name="cannot_add_video_playlist">Cannot add video to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="item_deleted_playlist">Item removed successfully</string>
    <string name="item_deleted_favorites">Item removed successfully</string>
    <string name="cannot_delete_video_playlist">Could not remove playlist</string>
    <string name="cannot_delete_video_favorites">Could not remove media from favorite</string>
    <string name="item_deleted_history">Video removed from history</string>
    <string name="cannot_delete_video_history">Could not remove from history</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="grid_icon">grid icon</string>
    <string name="gridLayout">gridLayout</string>
    <string name="all_songs">All Songs</string>
    <string name="all_list">All</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="unknown">&#60;unknown&#62;</string>
    <string name="album_details">%1$s - %2$s</string>
    <string name="media_failed_to_add_playlist">Could not add media to playlist</string>
    <string name="media_failed_to_add_favorites">Could not add media to favorites</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="create">Create</string>
    <string name="enter_name_first">Enter name first</string>
    <string name="playlist_already_exists">Playlist Already Exists</string>
    <string name="playlist_added_successfully">Playlist added successfully</string>
    <string name="playlist_failed_to_add">Could not create playlist</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="media_added_to_favorites">Media added to favorites</string>
    <string name="media_already_exists_favorites">Media already exists in favorites</string>
    <string name="history">History</string>
    <string name="video_player">Video Player</string>
    <string name="rename_failed">Could not rename file</string>
    <string name="file_renamed_successfully">File renamed successfully</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="save">Save</string>
    <string name="delete_failed">Could not delete file</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item ?</string>
    <string name="no">No</string>
    <string name="selected_theme">selected_theme</string>
    <string name="player_option">Player Option</string>
    <string name="shuffle_string">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="equaliser">EQ</string>
    <string name="favorite">Favourites</string>
    <string name="speed">Speed</string>
    <string name="orientation">Orientation</string>
    <string name="mini_player">Mini</string>
    <string name="previous_video">Prev</string>
    <string name="audioServiceRunning">audioServiceRunning</string>
    <string name="videoServiceRunning">videoServiceRunning</string>
    <string name="media">media</string>
    <string name="dummy_song_title">Dream it possible</string>
    <string name="close">close</string>
    <string name="no_history_found">No History Found</string>
    <string name="no_media_found">No Media Found</string>
    <string name="no_media">no_media</string>
    <string name="show_history">Show History</string>
    <string name="default_screen_orientation">Default Screen Orientation</string>
    <string name="show_video_name">Show Video Name</string>
    <string name="resume">Resume</string>
    <string name="gesture_operation">Gesture Operation</string>
    <string name="auto_popup_play">Auto Popup Play</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="show_history_on_homepage">Show history on home screen</string>
    <string name="show_video_name_description">Show videos title in video list</string>
    <string name="resume_description">Resume from the point where you stopped</string>
    <string name="gesture_operation_description">Control player by hand gestures</string>
    <string name="auto_popup_play_description">Continue playing video in floating window when exit</string>
    <string name="rate_us_description">Rate us on google play store</string>
    <string name="privacy_policy_description">All Rights Reserved</string>
    <string name="screen_orientation_auto">Auto Rotate</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="tap_duration_10">10 seconds</string>
    <string name="tap_duration_20">20 seconds</string>
    <string name="tap_duration_60">1 minute</string>
    <string name="tap_duration_30">30 seconds</string>
    <string name="tap_duration_5">5 seconds</string>
    <string name="double_tap_duration">Double tap duration</string>
    <string name="applying_theme">Applying Theme …</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storage_permission_denied">Storage Permission Needed</string>
    <string name="allow_storage_permission">Allow Permission Now</string>
    <string name="get_started">Get Started</string>
    <string name="rate_description1">Tell us how was your experience? </string>
    <string name="rate_description2">Please Share this rating on Google Play Store by tapping Continue</string>
    <string name="continueText">Continue</string>
    <string name="feedbackText">Feedback</string>
    <string name="rate_us_dialog_heading_rate">Rate your Experience </string>
    <string name="rate_us_dialog_heading_exit">Do you want to exit ? </string>
    <string name="not_now">Not Now</string>
    <string name="unlockUnlimitedAccess">Unlock Unlimited Access</string>
    <string name="toAdsFreeVersion">to ads free version</string>
    <string name="noAds">No Ads</string>
    <string name="subscribe1Click">Subscribe on just one click</string>
    <string name="dummy_price">500 PKR / month</string>
    <string name="priceChargeText">Price will be charged after end of trial period</string>
    <string name="autoChargeText">Auto charge per month*</string>
    <string name="downloadAllThemes">Download All Themes</string>
    <string name="cancelAnyTime">Cancel any time</string>
    <string name="subscribeNow">Subscribe Now</string>
    <string name="first_time">first_time</string>
    <string name="button_click">button_click</string>
    <string name="subtitle">Subtitile</string>
    <string name="error_files_missing">File don\'t exist</string>
    <string name="error_details">Details</string>
    <string name="subtitles_scope">Subtitle</string>
    <string name="no_song">No Song</string>
    <string name="video_resize_fit">Fit</string>
    <string name="video_resize_crop">Crop</string>
    <string name="video_orientation_landscape">Landscape orientation</string>
    <string name="video_orientation_portrait">Portrait orientation</string>
    <string name="video_orientation_auto">Auto orientation</string>
    <string name="share">Share</string>
    <string name="play_as_audio">Play as Audio</string>
    <string name="open_subtitles">open subtitles</string>
    <string name="preparing_your_playlist">Preparing your playlist …</string>
    <string name="loading_media">Loading Media …</string>
    <string name="loading_wait">Please Wait …</string>
    <string name="already_first_item">Already first item of list</string>
    <string name="already_last_item">Already last item of list</string>
    <string name="have_data">have_data</string>
    <string name="theme_already_selected">Theme already selected</string>
    <string name="no_internet">Check internet connection</string>
    <string name="loading_ad">Loading Ad..</string>
    <string name="ad_attribution">Ad</string>
    <string name="adIcon">Ad Icon</string>
    <string name="select_a_file_to_delete">Select the file to delete</string>
    <string name="others">Others</string>
    <string name="error_message">Some Thing Wrong</string>
    <string name="break_image">break_image</string>
    <string name="audio_sharing">audio_sharing</string>
    <string name="type_">type_</string>
    <string name="install">Install</string>
    <string name="facebook_url">https://m.facebook.com</string>
    <string name="facebook">Facebook</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="likee">Likee</string>
    <string name="fb_watch">FB Watch</string>
</resources>