<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_margin="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/iv_cancel"
        android:padding="@dimen/_10sdp"
        app:tint="@color/colorPrimary" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:autofillHints="@string/search_for_videos_playlist_folders"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/enter_playlist_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
         android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/iv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/btn_done"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />


</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
