<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:ignore="MissingDefaultResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="@dimen/_70sdp">


            <ImageView
                android:id="@+id/iv_song"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/songs"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/ic_audio_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_5sdp"

                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_more_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:gravity="bottom"
                android:includeFontPadding="false"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/dummy_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@id/iv_more"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toEndOf="@id/iv_song"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:gravity="top"
                android:includeFontPadding="false"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/unknown"
                android:textColor="@color/subTextColor"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_more"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="@id/tv_name" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/subTextColor"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>