<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/callToAction"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:minWidth="@dimen/_70sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/adIcon"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:contentDescription="@string/adIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/callToAction"
            app:layout_constraintStart_toEndOf="@id/adIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">


            <TextView
                android:id="@+id/adHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_attribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/ad_attribution"
                android:textColor="@color/white"
                android:textSize="@dimen/_7ssp"
                app:layout_constraintStart_toStartOf="@id/adHeadline"
                app:layout_constraintTop_toBottomOf="@id/adHeadline" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:progressBackgroundTint="#000"
                android:rating="3"
                app:layout_constraintBottom_toBottomOf="@id/tv_attribution"
                app:layout_constraintStart_toEndOf="@id/tv_attribution"
                app:layout_constraintTop_toTopOf="@id/tv_attribution" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.gms.ads.nativead.NativeAdView>
